2003-10-12  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: enabled Add/Edit/Remove buttons for family view,
	perform a "back button" operation when a person is deleted. Instead of
	leaving no one selected, go back to the previous person.

2003-10-12  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/README, src/NEWS, src/ChangeLog, src/po/ChangeLog, src/AUTHORS: 
	Remove extra files.
	* AUTHORS: Consolidate with src/AUTHORS.
	* src/plugins/Makefile.am, src/plugins/Makefile.in: Ship RelGraph.py 
	and rel_it.py.
	* src/ArgHandler.py: Split off gramps_main into a separate file.
	* src/gramps_main.py: Likewise.
	* src/Makefile.am, src/Makefile.in: Ship src/ArgHandler.py.
	* NEWS: More items.
	* src/FamilyView.py (new_spouse_after_edit): Rename function (used 
	to be called spouse_after_edit); 
	(add_spouse): Call new_spouse_after_edit.
	(spouse_after_edit): Add function to be called after editing existing
	spouse's personal data. Takes care of display issues only;
	(new_child_after_edit): Rename function (used to be called 
	child_after_edit);
	(add_child_clicked): Call new_child_after_edit.
	(edit_relationship): Change callback to get consistent behavior.

2003-10-12  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelLib.py : support for capitalized name formats
	* src/EditPerson.py: eliminate capitilzing names, instead rely on
	the display formats
	* src/Utils.py: new display formats for names
	* src/GrampsCfg.py: eliminate name only option in status line,
	add support for capitalized name formats
	* src/gramps_main.py: eliminate name only option in status line
	* src/preferences.glade : eliminate name only option in status line,
	drop capitalize in favor of expanded name format
	* src/plugins/GraphViz.py: install only for python 2.2
	* src/plugins/WebPage.py: handle page titles
	* src/docgen/HtmlDoc.py: handle page titles

2003-10-11  Lorenzo Cappelletti  <lorenzo.cappelletti@email.it>